--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -37,8 +37,15 @@
   title     = {optimizeR: Unified Framework for Numerical Optimizer},
   author    = {Oelschläger, L. and Ötting, M.},
   year      = {2023},
-  note      = {R package version 0.3.1},
+  note      = {R package version 1.0.0},
   url       = {https://CRAN.R-project.org/package=optimizeR}
+}
+
+@Article{Schwendinger:2023,
+  title = {CRAN Task View: Optimization and Mathematical Programming},
+  author = {F. Schwendinger and H.W. Borchers},
+  year = {2023},
+  url = {https://CRAN.R-project.org/view=Optimization}
 }
 
 @article{Shireman:2017,
