--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -23,6 +23,15 @@
   year      = {1977},
   publisher = {Wiley Online Library}
 }
+@article{Nelder:1965,
+  author = {Nelder, J. A. and Mead, R.},
+  title = "{A Simplex Method for Function Minimization}",
+  journal = {The Computer Journal},
+  volume = {7},
+  number = {4},
+  year = {1965},
+  doi = {10.1093/comjnl/7.4.308}
+}
 
 @article{Nocedal:2006,
   title     = {Quadratic programming},
