--- a/vignettes/ino.Rmd
+++ b/vignettes/ino.Rmd
@@ -52,7 +52,7 @@ The package follows an object-oriented approach^[We make use of the object-orien
 
 The main benefits of using the package are as follows:
 
-- Any optimizer implemented in R can be applied for minimization and maximization tasks.^[To achieve consistency across implementations of optimization algorithms in R, we make use of the framework provided by the `{optimizeR}` package [@Oelschlaeger:2023].]
+- Any optimizer implemented in R can be applied for minimization and maximization tasks. To achieve consistency across implementations of optimization algorithms in R, we make use of the framework provided by the `{optimizeR}` package [@Oelschlaeger:2023]. Below in the appendix, we provide more details on this framework.
 
 - Generally applicable initialization strategies are implemented, and users can extend custom strategies.
 
@@ -69,6 +69,7 @@ To illustrate the package workflow, we solve a likelihood optimization problem. 
 ```{r, load ino}
 # install.packages("ino")
 # library("ino")
+rm(list = ls())      # TODO: remove
 devtools::load_all() # TODO: remove
 ```
 
@@ -282,10 +283,87 @@ Nop_mixture$optima(which_direction = "max", group_by = ".optimization_label", di
 
 ### Comparing optimizer functions
 
-How do different optimization approaches perform for this optimization problem? So far, we only applied the `stats::nlm` optimizer. Now, we will compare its results and optimization time to 
+How do different optimization approaches perform for this optimization problem? So far, we only applied the `stats::nlm` optimizer, which uses a Newton-type algorithm. Now, we will compare its results and optimization time to 
 
-1. the `stats::optim` optimizer, an alternative R optimizer, and 
-2. the expectation-maximization algorithm, an alternative optimization method for mixture models, which we briefly introduce in the following. 
+1. `stats::optim`, an alternative R optimizer which (by default) applies the Nelder-Mead algorithm [@Nelder:1965], and 
+2. the expectation-maximization algorithm `em_optimizer`, an alternative optimization method for mixture models, which we define in the appendix below. 
+
+```{r, define em already here, include = FALSE}
+# TODO: data as ... argument?
+em <- function(normal_mixture_llk, theta, epsilon = 1e-08, iterlim = 1000, data) {
+  llk <- normal_mixture_llk(theta, data)
+  mu <- theta[1:2]
+  sd <- exp(theta[3:4])
+  lambda <- plogis(theta[5])
+  for (i in 1:iterlim) {
+    class_1 <- lambda * dnorm(data, mu[1], sd[1])
+    class_2 <- (1 - lambda) * dnorm(data, mu[2], sd[2])
+    posterior <- class_1 / (class_1 + class_2)
+    lambda <- mean(posterior)
+    mu[1] <- mean(posterior * data) / lambda
+    mu[2] <- (mean(data) - lambda * mu[1]) / (1 - lambda)
+    sd[1] <- sqrt(mean(posterior * (data - mu[1])^2) / lambda)
+    sd[2] <- sqrt(mean((1 - posterior) * (data - mu[2])^2) / (1 - lambda))
+    llk_old <- llk
+    theta <- c(mu, log(sd), qlogis(lambda))
+    llk <- normal_mixture_llk(theta, data)
+    if (is.na(llk)) stop("em failed")
+    if (llk - llk_old < epsilon) break
+  }
+  list("llk" = llk, "estimate" = theta, "iterations" = i)
+}
+em_optimizer <- optimizeR::Optimizer$new("custom")
+em_optimizer$definition(
+  algorithm = em,
+  arg_objective = "normal_mixture_llk",
+  arg_initial = "theta",
+  out_value = "llk",
+  out_parameter = "estimate",
+  direction = "max"
+)
+```
+
+We add these two optimizers to our `Nop_mixture` object, again via the `{optimizeR}` framework. Here, `em_optimizer` already is an optimizer in the required framework. In the appendix below, we go into detail how this optimizer is implemented.
+
+```{r, set optim and em algorithm}
+optim <- optimizeR::Optimizer$new(which = "stats::optim")
+Nop_mixture$
+  set_optimizer(optim)$
+  set_optimizer(em_optimizer)
+```
+
+Next, we initialize at $100$ random points and optimize the mixture likelihood with each of the three optimizers from the same points:
+
+```{r, optimizer comparison, eval = FALSE}
+Nop_mixture$
+  initialize_random(runs = 100)$
+  optimize(which_direction = "max", optimization_label = "optimizer_comparison")
+```
+
+The `$plot()` method provides a visual comparison of the optimization times and obtained values:
+
+```{r, plot-seconds, eval = FALSE}
+Nop_mixture$plot(
+  which_element = "seconds",         # plot the optimization times in seconds
+  group_by = ".optimizer_label",     # comparison across optimizers
+  relative = TRUE,                   # relative differences to the median of the top boxplot
+  which_run = "optimizer_comparison" # select only the results from the comparison
+  xlim = c(-1, 3)                    # x-axis limits
+)
+```
+
+```{r, plot-values, eval = FALSE}
+Nop_mixture$plot(
+  which_element = "value",           # plot the obtained optima values
+  group_by = ".optimizer_label"
+)
+```
+
+We conclude that ...
+
+## Appendix
+
+### The expectation-maximization algorithm
 
 The likelihood function of the mixture model cannot be maximized analytically. But if we knew the class membership of each observation, the optimization problem would collapse to independent maximum likelihood estimation of two Gaussian distributions, which then can be solved analytically. This observation motivates the so-called expectation-maximization (EM) algorithm [@Dempster:1977], which iterates through the following steps:
 
@@ -322,6 +400,8 @@ em <- function(normal_mixture_llk, theta, epsilon = 1e-08, iterlim = 1000, data)
 }
 ```
 
+### Defining optimizers via the `{optimizeR}` framework
+
 ```{r, define em optimizeR}
 em_optimizer <- optimizeR::Optimizer$new("custom")
 em_optimizer$definition(
@@ -333,24 +413,5 @@ em_optimizer$definition(
   direction = "max"
 )
 ```
-
-```{r, set em algorithm}
-Nop_mixture$set_optimizer(em_optimizer, optimizer_label = "em")
-```
-
-```{r, set optim algorithm}
-optim <- optimizeR::Optimizer$new(which = "stats::optim")
-Nop_mixture$set_optimizer(optim)
-```
-
-Clear results, start from same values.
-
-The `$plot()` method provides an overview of the optimization times. Setting `by = "optimizer"` allows for comparison across across optimizers, setting `relative = TRUE` plots relative differences to the median of the top boxplot:
-
-```{r, plot-by-optimizer, eval = FALSE}
-Nop_mixture$plot(by = "optimizer", relative = TRUE, xlim = c(-1, 3))
-```
-
-We conclude that ...
 
 ## References
